--- a/GameWebDemo/Views/Account/Login.cshtml
+++ b/GameWebDemo/Views/Account/Login.cshtml
@@ -21,7 +21,7 @@
         {
             <input name="UserName" type="text" class="input-block" placeholder="账号"/>
             <input name="Password" type="password" class="input-block" placeholder="密码"/>
-            <input type="submit" value="登录"/>
+            <input type="submit" value="登录" id="submit"/>
         }
      @*显示错误信息, TempData 用于跨页传值，但是取一次值就失效了！*@
     <div style="color:red">@TempData["msg"]</div>
