--- a/GameWebDemo/Views/Home/Index.cshtml
+++ b/GameWebDemo/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <div id="content">
     <div id="clink">
         <img src="~/img/icon_home2.png"/>
-        @Html.ActionLink("首页", "Index", "Home")
+        @Html.ActionLink("首页", "Index", "Home")>>
     </div>
     <div id="list">
         @foreach (var item in list)
