--- a/GameWebDemo/Views/Msg/Detail.cshtml
+++ b/GameWebDemo/Views/Msg/Detail.cshtml
@@ -11,20 +11,20 @@
         <a href="/Home/Index">首页</a> >>
         <a href="/Msg/Index">管理首页</a>
     </div>
-    <div style="text-align:center;font-size:30px">
+    <div style="text-align:center;font-size:20px">
         <div>
             <span>@Model.MsgTitle</span>
         </div>
         <div>
             <img src="~/img/icon_author.png" />
-            <span>@Model.MsgTitle</span>
+            <span>@Model.Account.AccountName</span>
             <img src="~/img/icon_clock.png" />
             <span>@Model.MsgTime</span>
             <img src="~/img/icon_hit.png" />
             <span>@Model.MsgHit</span>
         </div>
         <div>
-            <img src="@Model.MsgPhoto" style="height:200px;width:200px" />
+            <img src="@Model.MsgPhoto" style="height:400px;width:400px" />
         </div>
         <div>
             <span>@Model.MsgText</span>
